[package]
name = "helsafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.26.1"
rusqlite = { version = "0.29.0", features = ["bundled-sqlcipher"] }
dirs = "5.0.1"
rpassword = "7.2.0"
